# dynamo

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ATTRIBUTIONS-Go.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CODEOWNERS  Cargo.toml  Dockerfile.sgl-dynamo  Earthfile  JAILED_STREAM_README.md  README.md  README_SLA_Planner.md  _set_dev_version.py  aiconfigurator_benchmark_analysis.md  deny.toml  deps.txt  dynamo.code-workspace  example_python_parser.py  hatch_build.py  k8s.sh  pyproject.toml  pyrightconfig.json  quick-start.ipynb  quick_start.ipynb  quickstart.md  run_dynamo_warm_spare.sh  sdk-proposal.md  serve.cast  serve_2.cast  support_matrix.md  triton.code-workspace
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: .env  Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh  setup-gpg.sh
.github/workflows/: build-and-test-vllm.yml  build-and-test.yml  codecov.yml  (+21 more)
.sandbox/: ack_redesign_plan.md  ack_redesign_v2_typestate.md  pr_3235_mitigation_plan.md
agg_tests/: README.md  conftest.py  utils.py
benchmarks/: .gitignore  README.md  benchmark.sh
components/: Cargo.toml
components/oscar/: Cargo.toml
components/oscar/src/: error.rs  hash.rs  keys.rs  lib.rs  object.rs  registry.rs  storage.rs  v2.rs  watcher.rs
components/oscar/src/v2/: descriptors.rs  keys.rs
components/router/: Cargo.toml
components/router/src/: main.rs
components/vllm_worker/: README.md  pyproject.toml
components/vllm_worker/src/dynamo/components/vllm_worker/: kv_router.py  prefill_worker.py  processor.py  worker.py
components/vllm_worker/src/dynamo/components/vllm_worker/routerless/: prefill_worker.py  worker.py
components/vllm_worker/src/dynamo/components/vllm_worker/utils/: prefill_queue.py
container/: Dockefile.docs  Dockerfile  Dockerfile.docs  Dockerfile.kvbm  Dockerfile.nixl  Dockerfile.none  Dockerfile.planner  Dockerfile.sglang  Dockerfile.sglang-deepep  Dockerfile.sglang-gb200  Dockerfile.sglang-wideep  Dockerfile.sglang-wideep-gb200  Dockerfile.tensorrt_llm  Dockerfile.tensorrt_llm_prebuilt  Dockerfile.trtllm  Dockerfile.trtllm_prebuilt  Dockerfile.vllm  Dockerfile.vllm.arm64  Dockerfile.vllm_aarch64  Dockerfile.vllm_nixl  Dockerfile.vllm_v1  Earthfile  build.sh  build_trtllm_base_image.sh  build_trtllm_wheel.sh  launch_message.txt  run.sh  use-sccache.sh  version.py  version_info.Dockerfile  version_info.Dockerfile.dockerignore
deploy/: README.md  __init__.py  docker-compose.yml  dynamo_check.py  sanity_check.py
deploy/dynamo/api-store/: Earthfile  README.md  docker-compose.yaml  main.py  pyproject.toml
deploy/dynamo/api-store/ai_dynamo_store/: __init__.py  __main__.py  app.py
deploy/dynamo/api-store/ai_dynamo_store/api/: __init__.py  deployments.py
deploy/dynamo/api-store/ai_dynamo_store/models/: dynamo_deployment.py  example_application.py  generate_models.py
deploy/dynamo/api-store/ai_dynamo_store/models/cloudcoil/: __init__.py  apimachinery.py
deploy/dynamo/api-store/ai_dynamo_store/tests/: test_app.py
deploy/dynamo/sdk/: README.md  pyproject.toml
deploy/dynamo/sdk/docs/: dynamo_sdk_architecture.md
deploy/dynamo/sdk/src/dynamo/sdk/: __init__.py
deploy/dynamo/sdk/src/dynamo/sdk/cli/: allocator.py  bento_util.py  circus.py  cli.py  serve.py  serve_dynamo.py  server.py  serving.py  utils.py
deploy/dynamo/sdk/src/dynamo/sdk/core/: __init__.py  lib.py
deploy/dynamo/sdk/src/dynamo/sdk/core/decorators/: endpoint.py
deploy/dynamo/sdk/src/dynamo/sdk/core/endpoints/: base.py
deploy/dynamo/sdk/src/dynamo/sdk/core/service/: dependency.py  interface.py
deploy/dynamo/sdk/src/dynamo/sdk/core/targets/: README.md  kubernetes.py  local.py  standalone.py
deploy/dynamo/sdk/src/dynamo/sdk/lib/: binary_manager.py  decorators.py  dependency.py  exceptions.py  image.py  loader.py  resource.py  service.py
deploy/dynamo/sdk/src/dynamo/sdk/tests/: e2e_gpu_allocation.py  pipeline.py  pipeline_gpu.py  test_allocator.py  test_e2e.py
docs/: Makefile  active_message.md  architecture.md  arm_build.md  conf.py  contents.rst  dynamo_glossary.md  exclusions.txt  generate_docs.py  get_started.md  hidden_toctree.rst  index.md  index.rst  planner.md  support_matrix.md
dynamo/: README.md
examples/: README.md  onnx_infer.py  pytorch_infer.py
launch/: Cargo.toml
lib/am/: Cargo.toml
lib/am/examples/: Cargo.toml
lib/am/examples/src/: lib.rs
lib/am/src/: boxed_transport.rs  builder.rs  client.rs  cohort.rs  dispatcher.rs  handler.rs  handler_impls.rs  manager.rs  message_router.rs  network_client.rs  response.rs  response_manager.rs  status.rs  system_handlers.rs  transport.rs  utils.rs
lib/am/src/zmq/: discovery.rs  manager.rs  thin_transport.rs  transport.rs
lib/am/tests/: handler_discovery.rs
lib/bindings/nixl-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
lib/bindings/nixl-sys/src/: lib.rs
lib/bindings/nixl-sys/tests/: integration_test.rs
lib/kv/common/: Cargo.toml
lib/kv/common/src/: lib.rs
lib/logging/: Cargo.toml
lib/logging/src/: config.rs  lib.rs  logging.rs
lib/runtime/examples/active_message/: Cargo.toml
lib/runtime/examples/active_message/src/: lib.rs
lib/tokens/: Cargo.toml
lib/tokens/src/: lib.rs
manual-configs/: README.md  planner-sla-component.yaml  planner-sla-config.yaml  planner-sla-deployment.yaml  profile-sla-job-agg.yaml  profile-sla-job-disagg.yaml  profile-sla-job.yaml  profiling-pvc.yaml  prometheus-component.yaml  prometheus-config.yaml  prometheus-deployment.yaml  prometheus-service.yaml
python-wheel/: pyproject.toml
qa_test_plan/: README.md
rust-tracing-playground/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  good.logs  tempo.yaml
rust-tracing-playground/grafana/provisioning/datasources/: tempo.yaml
rust-tracing-playground/src/: main.rs
scripts/: README.bench_layout_transfers.md  bench_layout_transfers.rs
tests/: IMPROVEMENTS.md  README.md  conftest.py  ports.md  sglang_cancel_client.py  test_dynamo_run.py  test_dynamo_serve.py  utils.py
tutorials/: Dockerfile  README.md  automation.sh  perf.sh  read_results.py
(+1791 files in other folders)
