[package]
name = "router"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
dynamo-runtime = { workspace = true}
dynamo-llm = { workspace = true}

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
