# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-am"
version = "0.0.0"
edition = "2024"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/dynamo"
repository = "https://github.com/ai-dynamo/dynamo.git"
readme = "README.md"
description = "Dynamo Active Message System - High-performance distributed messaging"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
derive_builder = "0.20"
futures = "0.3"
rand = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1.17", features = ["v4", "serde"] }

# Crate-specific dependencies
dashmap = "6.1.0"
local-ip-address = "0.6.3"
tmq = "0.5.0"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
