[package]
name = "dynamo-nixl-sys"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
links = "nixl"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"
cc = "1.0"
