[package]
name = "dynamo-kv-common"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = ["cuda"]
cuda = ["dep:cudarc", "dep:ndarray"]

[dependencies]
thiserror = { workspace = true }

cudarc = { version = "0.16.0", features = ["cuda-12040"], optional = true }
ndarray = { version = "0.16", optional = true }
